made edits so that mobile menu icon changes on toggle and fixes a bug where tiny line still shows body behind menu

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,1 +1,2 @@
 $header-height: 100px;
+$mobile-header-height: 85px;
