--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -6,10 +6,10 @@ header {
     top: 0;
     width: 100%;
     z-index: 999;
-    background: rgba(255, 255, 255, 0.9);
+    background: #fff;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out 0.3s;
-    backdrop-filter: blur(19px);
-    -webkit-backdrop-filter: blur(19px);
+    // backdrop-filter: blur(19px);
+    // -webkit-backdrop-filter: blur(19px);
 
     &.scrolled {
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -37,7 +37,7 @@ header {
     }
 
     .mobile-menu {
-        height: calc(100vh - base.$header-height);
+        height: calc(100vh - base.$mobile-header-height + 1px);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -46,10 +46,7 @@ header {
         padding: 0;
         transform: translateX(100%);
         transition: transform 0.3s ease;
-
-        &__open {
-            transform: translateX(0%);
-        }
+        top: calc(base.$mobile-header-height - 1px);
 
         & > div {
             display: flex;
@@ -95,22 +92,31 @@ header {
     .bottom {
         transform-origin: 26px 60px;
     }
-
-    &:hover .line {
-        stroke: #000;
-    }
-
-    &:hover .top {
-        transform: rotate(45deg);
-    }
-
-    &:hover .middle {
-        stroke-dasharray: 1 60;
-        stroke-dashoffset: -30;
-    }
-
-    &:hover .bottom {
-        transform: rotate(-45deg);
-    }
 }
 
+.mobile-menu-isOpen {
+    box-shadow: 0 !important;
+
+    .mobile-menu {
+        transform: translateX(0%);
+    }
+
+    .mobile-menu-toggle {
+        .line {
+            stroke: #000;
+        }
+
+        .top {
+            transform: rotate(45deg);
+        }
+
+        .middle {
+            stroke-dasharray: 1 60;
+            stroke-dashoffset: -30;
+        }
+
+        .bottom {
+            transform: rotate(-45deg);
+        }
+    }
+}
